--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "drm-alerts",
-    "version": "0.0.1",
-    "description": "dismissable alerts for web apps",
-    "main": "dist/drm-alerts.js",
+    "name": "elr-alerts",
+    "version": "1.0.0",
+    "description": "alerts",
+    "main": "dist/elr-alerts.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
         "jquery",
+        "javascript",
         "ux",
-        "alerts"
+        "alerts",
+        "feedback"
     ],
-    "homepage": "http://dynamicresponsewebsites.net/drm-utilities/drm-alerts.html",
+    "homepage": "http://elizabeth-rogers.com/elr-utilities/elr-alerts.html",
     "license": "MIT",
     "author": {
         "name": "Elizabeth Rogers",
@@ -20,20 +22,13 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/dynamicresponsemedia/drm-alerts.git"
-    },
-    "dependencies": {
-        "jquery": "2.1.1"
+        "url": "https://github.com/elr-utilities/elr-alerts.git"
     },
     "devDependencies": {
-        "coffee-script": "1.7.1",
         "grunt": "~0.4.4",
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-uglify": "~0.4.0",
-        "grunt-contrib-coffee": "~0.10.1",
-        "grunt-contrib-watch": "~0.6.1",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.9.2",
-        "grunt-contrib-copy": "~0.5.0"
+        "grunt-contrib-jshint": "~0.9.2"
     }
 }
