update package.json and readme.md

--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "elr-alerts",
-  "version": "1.1.2",
   "description": "alerts",
-  "main": "dist/elr-alerts.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/elr-utilities/elr-alerts.git"
-  },
-  "scripts": {
-    "build": "build"
+  "version": "1.1.2",
+  "author": "Elizabeth Rogers",
+  "bugs": {
+    "url": "https://github.com/Beth3346/elr-alerts",
+    "email": "beth@elizabeth-rogers.com"
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
@@ -24,5 +21,18 @@
     "gulp-jshint": "^2.0.1",
     "gulp-sourcemaps": "^2.1.1",
     "jshint": "^2.9.3"
+  },
+  "homepage": "http://www.elizabeth-rogers.com/elr-utilities/js-alerts.html",
+  "keywords": [
+    "javascript, jquery, alerts, ui"
+  ],
+  "license": "SEE LICENSE IN LICENSE.md",
+  "main": "dist/elr-alerts.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elr-utilities/elr-alerts.git"
+  },
+  "scripts": {
+    "build": "build"
   }
 }
