--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,4 @@ node_js:
   - node
 before_script:
   - npm install
-  - npm install -g gulp
-  - gulp
-  - npm run cover
-after_success:
-  - npm run report-coverage
+  = npx webpack
