--- a/package.json
+++ b/package.json
@@ -5,66 +5,31 @@
   "author": "Elizabeth Rogers",
   "bugs": {
     "url": "https://github.com/Beth3346/elr-alerts",
-    "email": "beth@elizabeth-rogers.com"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.0.0",
-    "elr-ui": "^0.1.0",
-    "jquery": "^3.1.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0",
-    "chai-arrays": "0.0.1",
-    "chai-jquery": "^2.0.0",
-    "chai-shallow-deep-equal": "^1.4.4",
-    "chai-subset": "^1.3.0",
-    "codecov": "^1.0.1",
-    "del": "^2.2.2",
-    "ghooks": "^1.3.2",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-jshint": "^2.0.1",
-    "gulp-mocha": "^3.0.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.1.1",
-    "jshint": "^2.9.3",
-    "mocha": "^3.2.0",
-    "mocha-notifier-reporter": "^0.1.2",
-    "nyc": "^10.0.0"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "gulp"
-    }
-  },
-  "nyc": {
-    "check-coverage": true,
-    "branches": 0,
-    "functions": 0,
-    "lines": 0,
-    "statements": 0,
-    "include": [
-      "src/*.js"
-    ]
+    "email": "beth3346@gmail.com"
   },
   "homepage": "http://www.elizabeth-rogers.com/elr-utilities/js-alerts.html",
-  "keywords": [
-    "javascript, jquery, alerts, ui"
-  ],
-  "license": "SEE LICENSE IN LICENSE.md",
+  "keywords": ["javascript, jquery, alerts, ui"],
+  "license": "MIT",
   "main": "dist/main.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/elr-utilities/elr-alerts.git"
+    "url": "https://github.com/Beth3346/elr-alerts.git"
   },
   "scripts": {
-    "build": "build",
-    "test": "nyc mocha test/test.js --compilers js:babel-core/register",
-    "test watch": "nyc mocha test/test.js watch --compilers js:babel-core/register",
-    "cover": "nyc --reporter=lcov npm test",
-    "report-coverage": "cat ./coverage/lcov.info | codecov"
+    "start": "webpack --config webpack.config.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.10",
+    "jest": "^22.4.2",
+    "style-loader": "^0.20.2",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.9"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-runtime": "^6.26.0",
+    "jquery": "^3.3.1"
   }
 }
