--- a/package.json
+++ b/package.json
@@ -20,21 +20,26 @@
   "scripts": {
     "start": "webpack --config webpack.config.js",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "tdd": "jest --watch",
     "build": "npx webpack --mode='production'"
   },
   "devDependencies": {
-    "css-loader": "^0.28.10",
-    "husky": "^1.0.0-rc.9",
-    "jest": "^22.4.2",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9"
+    "@types/jest": "^23.3.13",
+    "css-loader": "^2.1.0",
+    "husky": "^1.3.1",
+    "jest": "^23.6.0",
+    "style-loader": "^0.23.1",
+    "ts-jest": "^23.10.5",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
+    "@types/jquery": "^3.3.29",
+    "babel-preset-env": "^1.7.0",
     "babel-runtime": "^6.26.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4"
   },
   "husky": {
     "hooks": {
